# WARScribe-Parser

./: .cz.toml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.antigravity/: ARCHITECTURE.md  CONSTRAINTS.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
SETUP/: index.html
adr/000-template/: index.html
adr/001-python-language/: index.html
adr/002-precommit-required/: index.html
contributing/: index.html
docs/: SETUP.md  contributing.md  getting-started.md  index.md
docs/adr/: 000-template.md  001-python-language.md
getting-started/: index.html
search/: search_index.json
specs/001-roster-parsing/: analysis.md  plan.md  spec.md
src/warscribe_parser/: __init__.py  battlescribe.py  extractor.py  models.py
tests/: test_parser.py
