[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warscribe-parser"
version = "0.1.0"
description = "High-level parsing library for WARScribe notation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pre-commit>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/warscribe_parser"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
